<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/products_item"
        android:icon="@drawable/ic_store"
        android:title="@string/bottom_menu_title_products" />
    <item
        android:id="@+id/customers_item"
        android:icon="@drawable/ic_group"
        android:title="@string/bottom_menu_title_customers" />
    <item
        android:id="@+id/orders_item"
        android:icon="@drawable/ic_shopping_basket"
        android:title="@string/bottom_menu_title_orders" />
    <item
        android:id="@+id/account_item"
        android:icon="@drawable/ic_person"
        android:title="@string/bottom_menu_title_my_account" />
    <item
        android:id="@+id/crash_item"
        android:icon="@drawable/ic_fire"
        android:title="@string/bottom_menu_title_crash" />
</menu>