<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/shopping_cart"
        android:icon="@drawable/ic_shopping_cart"
        android:title="@string/menu_title_shopping_cart"
        app:showAsAction="ifRoom" />
</menu>