<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/cart_checkout_option"
        android:icon="@drawable/ic_shopping_cart_checkout"
        android:title="@string/cart_checkout_option"
        app:showAsAction="ifRoom" />
</menu>